--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "styled-components": "^4.4.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "axios": "0.19.0"
+    
   },
   "scripts": {
     "start": "react-scripts start",
